crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__print_str.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
Hello, world!
