crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__prove_fail.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: prove verification failed (SAT counterexamples found):
main#0#1 (caller=main, qbe_artifact=site_main_0_1.qbe, smt_artifact=site_main_0_1.smt2)
