crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__prove_statement_only.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: "format!(\"COMPILATION ERROR\\n\\n{err}\")"
snapshot_kind: text
---
COMPILATION ERROR

[OAC-RESOLVE-001] Error: failed to resolve/type-check program: prove(...) is statement-only and cannot be used as an expression
