crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__scope.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
1
3
4
