crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__std_hash_set.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
main#IntSet__maybe_resize_before_insert#i32#.oac_integer_site_i32__add__80 (root=main, caller=IntSet__maybe_resize_before_insert, op=add, semantic_type=I32, qbe_artifact=site_main_IntSet__maybe_resize_before_insert_i32__oac_integer_site_i32__add__80.qbe, smt_artifact=site_main_IntSet__maybe_resize_before_insert_i32__oac_integer_site_i32__add__80.smt2)
