crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__std_io.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
io1
0
100
