crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__std_mut_read_write.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-PROVE-001] Error: prove obligation verification failed: integer safety verification failed (SAT counterexamples found):
main#U8Mut__add_bytes#ptrint#.oac_integer_site_ptrint__add__stmt_0_return_expr_call_arg_0 (root=main, caller=U8Mut__add_bytes, op=add, semantic_type=PtrInt, qbe_artifact=site_main_U8Mut__add_bytes_ptrint__oac_integer_site_ptrint__add__stmt_0_return_expr_call_arg_0.qbe, smt_artifact=site_main_U8Mut__add_bytes_ptrint__oac_integer_site_ptrint__add__stmt_0_return_expr_call_arg_0.smt2)
