crates/oac/src/snapshots/oac__qbe_backend__tests__execution_tests__std_option_result.oa.snap
---
source: crates/oac/src/qbe_backend.rs
expression: snapshot_content
snapshot_kind: text
---
COMPILATION ERROR

[OAC-QBE-001] Error: compilation of QBE IR to assembly failed
